--- a/bookstarp/index3 copy 2.html
+++ b/bookstarp/index3 copy 2.html
@@ -123,19 +123,19 @@
     </header>
     <section class="parallax">
         <h2 id="title">第四市場</h2>
-        <img src="img/place.png" id="place">
-        <img src="img/dogg.png" id="dogg">
-        <img src="img/downd.png" id="downd">
-        <img src="img/flower.png" id="flower">
-        <img src="img/light.png" alt="light">
-        <img src="img/upper.png" alt="upper">
+        <img src="coffee/place.png" id="place">
+        <img src="coffee/dogg.png" id="dogg">
+        
+        <img src="coffee/flower.png" id="flower">
+    
+        <img src="coffee/upper.png" alt="upper">
     </section>
     <div class="content">
     <h2>簡介</h2>
         <p>歷史建築臺中市第四市場,於昭和7年(1932)創立，舊稱干城町消費市場（亦稱第四消費市場），隨著鄰近的建國市場設立、聚落人口的流失，消費人口大不如前，導致第四市場逐漸沒落，因而歇業，面臨拆除危機,民國101年文化局將第四市場列為歷史建築,才得以保留下來。</p>
     </div>
     <script>
-        gsap.to("#place", {
+        gsap.to("#flower", {
            scale:2, 
            duration:5,
            scrollTrigger:{
@@ -147,7 +147,7 @@
            }
         });
 
-        gsap.to("#dogg", {
+        gsap.to("#upper", {
            scale:0.8, 
            duration:5,
            transformOrigin: "50% 100%",
@@ -160,7 +160,7 @@
         });
 
 
-        gsap.to("#downd", {
+        gsap.to("#dogg", {
            x:-300, 
            scrollTrigger:{
              trigger: "#title",
@@ -170,7 +170,7 @@
            }
         });
 
-        gsap.to("#flower", {
+        gsap.to("#place", {
            x:300, 
            scrollTrigger:{
              trigger: "#title",
