--- a/bookstarp/index3 copy 3.html
+++ b/bookstarp/index3 copy 3.html
@@ -141,7 +141,7 @@
     
         <img src="coffee/upper.png" alt="upper">
     </section>
-    <div class="content">
+    <div class="content container-intro text-center">
     <h2>簡介</h2>
         <p>歷史建築臺中市第四市場,於昭和7年(1932)創立，舊稱干城町消費市場（亦稱第四消費市場），隨著鄰近的建國市場設立、聚落人口的流失，消費人口大不如前，導致第四市場逐漸沒落，因而歇業，面臨拆除危機,民國101年文化局將第四市場列為歷史建築,才得以保留下來。</p>
     </div>
@@ -181,7 +181,7 @@
            }
         });
 
-        gsap.to("#", {
+        gsap.to("#place", {
            x:300, 
            scrollTrigger:{
              trigger: "#title",
