--- a/bookstarp/coffee/index3 copy 2.html
+++ b/bookstarp/coffee/index3 copy 2.html
@@ -114,7 +114,7 @@
     <header>
         <a href="#" class="logo">第四市場</a>
         <ul class="nav">
-            <li><a href="#" class="active">Home</a></li>
+            <li><a href="index4.html" class="active">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="#">Contact</a></li>
@@ -123,12 +123,12 @@
     </header>
     <section class="parallax">
         <h2 id="title">第四市場</h2>
-        <img src="coffee/place.png" id="place">
-        <img src="coffee/dogg.png" id="dogg">
+        <img src="place.png" id="place">
+        <img src="dogg.png" id="dogg">
         
-        <img src="coffee/flower.png" id="flower">
+        <img src="flower.png" id="flower">
     
-        <img src="coffee/upper.png" alt="upper">
+        <img src="upper.png" alt="upper">
     </section>
     <div class="content">
     <h2>簡介</h2>
