--- a/bookstarp/coffee/index3 copy 2.html
+++ b/bookstarp/coffee/index3 copy 2.html
@@ -115,9 +115,9 @@
         <a href="#" class="logo">第四市場</a>
         <ul class="nav">
             <li><a href="index4.html" class="active">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index3 copy 2.html">簡介</a></li>
+            <li><a href="BG.html">場地介紹</a></li>
+            <li><a href="Taichung4thMarket.html">菜單</a></li>
             <li></li>
         </ul>
     </header>
