--- a/bookstarp/coffee/index4.html
+++ b/bookstarp/coffee/index4.html
@@ -20,8 +20,8 @@
               <div class="navbar-collapse" id="lokinav">
                 <ul class="navbar-nav me-auto">
                   <li class="nav-item"><a class="nav-link" href="index3 copy 2.html">簡介</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">場地介紹</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">菜單</a></li>
+                  <li class="nav-item"><a class="nav-link" href="BG.html">場地介紹</a></li>
+                  <li class="nav-item"><a class="nav-link" href="Taichung4thMarket.html">菜單</a></li>
                   <li class="nav-item"><a class="nav-link" href="#">活動</a></li>
                   <li class="nav-item"><a class="nav-link" href="#">店家資訊</a></li>
                 </ul>
