--- a/bookstarp/coffee/BG.html
+++ b/bookstarp/coffee/BG.html
@@ -20,6 +20,20 @@
  
 </head>
 <body>
+  <header>
+    <nav class="navbar navbar-expand navbar-light">
+         <h2>第四市場</h2>
+          <div class="navbar-collapse" id="lokinav">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item"><a class="nav-link" href="index3 copy 2.html">簡介</a></li>
+              <li class="nav-item"><a class="nav-link" href="BG.html">場地介紹</a></li>
+              <li class="nav-item"><a class="nav-link" href="Taichung4thMarket.html">菜單</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">活動</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">店家資訊</a></li>
+            </ul>
+          </div>
+      </nav>
+</header>
     <div class="jumbotron" style="color:black">
         <section id="bg" class="py-5">
             <header class="container text-center">
