--- a/coffee/Taichung4thMarket.html
+++ b/coffee/Taichung4thMarket.html
@@ -22,11 +22,12 @@
              <h2>第四市場</h2>
               <div class="navbar-collapse" id="lokinav">
                 <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a class="nav-link" href="index4.html">首頁</a></li>
                   <li class="nav-item"><a class="nav-link" href="index3 copy 2.html">簡介</a></li>
                   <li class="nav-item"><a class="nav-link" href="BG.html">場地介紹</a></li>
                   <li class="nav-item"><a class="nav-link" href="Taichung4thMarket.html">菜單</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">活動</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">店家資訊</a></li>
+               
+                  <li class="nav-item"><a class="nav-link" href="about.html">店家資訊</a></li>
                 </ul>
               </div>
           </nav>
