--- a/coffee/BG.html
+++ b/coffee/BG.html
@@ -31,7 +31,7 @@
               <li class="nav-item"><a class="nav-link" href="BG.html">場地介紹</a></li>
               <li class="nav-item"><a class="nav-link" href="Taichung4thMarket.html">菜單</a></li>
               <li class="nav-item"><a class="nav-link" href="#">活動</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">店家資訊</a></li>
+              <li class="nav-item"><a class="nav-link" href="about.html">店家資訊</a></li>
             </ul>
           </div>
       </nav>
