--- a/coffee/about.html
+++ b/coffee/about.html
@@ -19,7 +19,7 @@
          <h2>第四市場</h2>
           <div class="navbar-collapse" id="lokinav">
             <ul class="navbar-nav me-auto">
-              <li class="nav-item"><a class="nav-link" href="index4.html">首頁</a></li>
+              <li class="nav-item"><a class="nav-link" href="in">首頁</a></li>
               <li class="nav-item"><a class="nav-link" href="index3 copy 2.html">簡介</a></li>
               <li class="nav-item"><a class="nav-link" href="BG.html">場地介紹</a></li>
               <li class="nav-item"><a class="nav-link" href="Taichung4thMarket.html">菜單</a></li>
@@ -30,7 +30,7 @@
       </nav>
 </header>
 
-    <body background="market.png" style="position:100% 100%;">
+    <body background="market.png" style="background-size: cover;">
     <div style="height: 600px; background-color: rgba(241, 247, 255, 0.5)">
         <div class="album py-4  container text-center">
             <h4><b>店家資訊</b></h4> <hr/>
