--- a/coffee/about.html
+++ b/coffee/about.html
@@ -19,7 +19,7 @@
          <h2>第四市場</h2>
           <div class="navbar-collapse" id="lokinav">
             <ul class="navbar-nav me-auto">
-              <li class="nav-item"><a class="nav-link" href="in">首頁</a></li>
+              <li class="nav-item"><a class="nav-link" href="index4.html">首頁</a></li>
               <li class="nav-item"><a class="nav-link" href="index3 copy 2.html">簡介</a></li>
               <li class="nav-item"><a class="nav-link" href="BG.html">場地介紹</a></li>
               <li class="nav-item"><a class="nav-link" href="Taichung4thMarket.html">菜單</a></li>
