--- a/coffee/BG.html
+++ b/coffee/BG.html
@@ -21,6 +21,12 @@
 
 </head>
 <body>
+  
+  <body background="map2.jpeg" style="background-size: cover; height:600px">
+    <div style="height: 2200px; background-color: rgba(241, 247, 255, 0.8)" >
+        <div class="album py-4  container text-center">
+         
+        </div>
   <header>
     <nav class="navbar navbar-expand navbar-light">
          <h2>第四市場</h2>
