--- a/coffee/Taichung4thMarket.html
+++ b/coffee/Taichung4thMarket.html
@@ -3,15 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>菜單</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
-    <script src="js/scrollmagic/uncompressed/ScrollMagic.js"></script>
     <script src="index.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -19,51 +15,59 @@
 <body>
     <header>
         <nav class="navbar navbar-expand navbar-light">
-             <h2>第四市場</h2>
-              <div class="navbar-collapse" id="lokinav">
+            <h2>第四市場</h2>
+            <div class="navbar-collapse">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="index4.html">首頁</a></li>
-                  <li class="nav-item"><a class="nav-link" href="index3 copy 2.html">簡介</a></li>
-                  <li class="nav-item"><a class="nav-link" href="BG.html">場地介紹</a></li>
-                  <li class="nav-item"><a class="nav-link" href="Taichung4thMarket.html">菜單</a></li>
-               
-                  <li class="nav-item"><a class="nav-link" href="about.html">店家資訊</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">簡介</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">場地介紹</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">菜單</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">活動</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">店家資訊</a></li>
                 </ul>
-              </div>
-          </nav>
+            </div>
     </header>
     <div id="bg" class="bg-image">
-        <div>
-            <div section class="panel">
-                <img src="Menu_1.jpeg" id="panel" class="shadow-lg mx-auto d-block" width=500px>
-                <img src="Menu_2.jpeg" id="panel" class="shadow-lg mx-auto d-block" width=500px>
-                <img src="Menu_3.jpeg" id="panel" class="shadow-lg mx-auto d-block" width=500px>
-                <img src="Menu_4.jpeg" id="panel" class="shadow-lg mx-auto d-block" width=500px>
+        <section class="panel">
+            <div class="panel-content">
+                <img src="img/Menu 1.jpeg" alt="Snow" class="rounded mx-auto d-block">
             </div>
-        </div>
+        </section>
+        <section class="panel">
+            <div class="panel-content">
+                <img src="img/Menu 2.jpeg" class="rounded mx-auto d-block">
+            </div>
+        </section>
+        <section class="panel">
+            <div class="panel-content">
+                <img src="img/Menu 3.jpeg" class="rounded mx-auto d-block">
+            </div>
+        </section>
+        <section class="panel">
+            <div class="panel-content">
+                <img src="img/Menu 4.jpeg" class="rounded mx-auto d-block">
+            </div>
+        </section>
+        <section class="panel">
+            <div class="panel-content">
+                <div class="row row-cols-1 row-cols-md-2 g-5">
+                    <div class="col">
+                        <div class="card">
+                            <img src="img/Menu_6.jpeg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">第四市場餐盒</h5>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="img/Menu_5.jpeg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">餐盒價錢</h5>
+                                <div></div>
+                            </div>
+        </section>
     </div>
 </body>
-
-<script>
-	$(function () {
-		var controller = new ScrollMagic.Controller({
-			globalSceneOptions: {
-				triggerHook: 'onLeave',
-				duration: "200%"
-			}
-		});
-
-		var slides = document.querySelectorAll("section.panel");
-
-		for (var i=0; i<slides.length; i++) {
-			new ScrollMagic.Scene({
-					triggerElement: slides[i]
-				})
-				.setPin(slides[i], {pushFollowers: false})
-				.addIndicators() // add indicators (requires plugin)
-				.addTo(controller);
-		}
-	});
-</script>
 
 </html>
