--- a/coffee/Taichung4thMarket.html
+++ b/coffee/Taichung4thMarket.html
@@ -15,36 +15,38 @@
 <body>
     <header>
         <nav class="navbar navbar-expand navbar-light">
-            <h2>第四市場</h2>
-            <div class="navbar-collapse">
+             <h2>第四市場</h2>
+              <div class="navbar-collapse" id="lokinav">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">簡介</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">場地介紹</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">菜單</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">活動</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">店家資訊</a></li>
+                  <li class="nav-item"><a class="nav-link" href="index4.html">首頁</a></li>
+                  <li class="nav-item"><a class="nav-link" href="index3 copy 2.html">簡介</a></li>
+                  <li class="nav-item"><a class="nav-link" href="BG.html">場地介紹</a></li>
+                  <li class="nav-item"><a class="nav-link" href="Taichung4thMarket.html">菜單</a></li>
+            
+                  <li class="nav-item"><a class="nav-link" href="about.html">店家資訊</a></li>
                 </ul>
-            </div>
+              </div>
+          </nav>
     </header>
     <div id="bg" class="bg-image">
         <section class="panel">
             <div class="panel-content">
-                <img src="img/Menu 1.jpeg" alt="Snow" class="rounded mx-auto d-block">
+                <img src="Menu_1.jpeg" alt="Snow" class="rounded mx-auto d-block">
             </div>
         </section>
         <section class="panel">
             <div class="panel-content">
-                <img src="img/Menu 2.jpeg" class="rounded mx-auto d-block">
+                <img src="Menu_2.jpeg" class="rounded mx-auto d-block">
             </div>
         </section>
         <section class="panel">
             <div class="panel-content">
-                <img src="img/Menu 3.jpeg" class="rounded mx-auto d-block">
+                <img src="Menu_3.jpeg" class="rounded mx-auto d-block">
             </div>
         </section>
         <section class="panel">
             <div class="panel-content">
-                <img src="img/Menu 4.jpeg" class="rounded mx-auto d-block">
+                <img src="Menu_4.jpeg" class="rounded mx-auto d-block">
             </div>
         </section>
         <section class="panel">
@@ -52,7 +54,7 @@
                 <div class="row row-cols-1 row-cols-md-2 g-5">
                     <div class="col">
                         <div class="card">
-                            <img src="img/Menu_6.jpeg" class="card-img-top" alt="...">
+                            <img src="Menu_6.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">第四市場餐盒</h5>
                                 <p class="card-text"></p>
@@ -61,7 +63,7 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img src="img/Menu_5.jpeg" class="card-img-top" alt="...">
+                            <img src="Menu_5.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">餐盒價錢</h5>
                                 <div></div>
